Refactored [TypoGrid] and image blending
# Conflicts:
#	Types/RenderQuad_b89c5923-cc58-4d7a-8dce-eb1f8cdfc6e8.t3
#	Types/RenderQuad_b89c5923-cc58-4d7a-8dce-eb1f8cdfc6e8.t3ui

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RenderTargetExample.cs" />
+    <Compile Include="Types\Vector2FromInt2.cs" />
     <Compile Include="Types\BloomExample.cs" />
     <Compile Include="Types\TypoGridExample.cs" />
     <Compile Include="Types\PixturTestLab.cs" />
