Added StringBuilder experiments

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,13 +58,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\HasValueIncreased.cs" />
+    <Compile Include="Types\SplitString.cs" />
+    <Compile Include="Types\ScrambleBuffer.cs" />
+    <Compile Include="Types\TextGrid.cs" />
+    <Compile Include="Types\BufferToString.cs" />
+    <Compile Include="Types\AppendToBuffer.cs" />
+    <Compile Include="Types\StringBuilder.cs" />
     <Compile Include="Types\RenderTargetExample.cs" />
     <Compile Include="Types\Vector2FromInt2.cs" />
     <Compile Include="Types\BloomExample.cs" />
     <Compile Include="Types\TypoGridExample.cs" />
     <Compile Include="Types\PixturTestLab.cs" />
     <Compile Include="Types\MaskedBloom.cs" />
-    <Compile Include="Types\TypoGrid.cs" />
     <Compile Include="Types\LinearRamp.cs" />
     <Compile Include="Types\DistortAndShade.cs" />
     <Compile Include="Types\Floor.cs" />
