Added some text scrambling operators

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\UseFallbackTexture.cs" />
+    <Compile Include="Types\ToUpperCase.cs" />
     <Compile Include="Types\HasValueIncreased.cs" />
     <Compile Include="Types\SplitString.cs" />
     <Compile Include="Types\ScrambleBuffer.cs" />
