Highlight characters in TextGrid

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\TextGridExample2.cs" />
     <Compile Include="Types\UseFallbackTexture.cs" />
     <Compile Include="Types\ToUpperCase.cs" />
     <Compile Include="Types\HasValueIncreased.cs" />
