--- a/Operators.csproj
+++ b/Operators.csproj
@@ -34,6 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SharpDX, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpDX.4.2.0\lib\net45\SharpDX.dll</HintPath>
     </Reference>
@@ -58,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\FractalNoise.cs" />
+    <Compile Include="Types\SoundTrackLevels.cs" />
     <Compile Include="Types\TextGridExample2.cs" />
     <Compile Include="Types\UseFallbackTexture.cs" />
     <Compile Include="Types\ToUpperCase.cs" />
@@ -94,7 +100,6 @@
     <Compile Include="Types\Kaleidorama1.cs" />
     <Compile Include="Types\Tint.cs" />
     <Compile Include="Types\KochKaleidoskope.cs" />
-    <Compile Include="Types\NoiseLab.cs" />
     <Compile Include="Types\BugMultipleTransforms.cs" />
     <Compile Include="Types\Blend.cs" />
     <Compile Include="Types\CheckerBoard.cs" />
