Cleaned up Operate namespaces

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\BeatCounterTest.cs" />
+    <Compile Include="Types\SoundLevelExample.cs" />
+    <Compile Include="Types\Partial.cs" />
+    <Compile Include="Types\ExportNumbers.cs" />
+    <Compile Include="Types\NumbersMain.cs" />
+    <Compile Include="Types\Numbers.cs" />
+    <Compile Include="Types\Time.cs" />
     <Compile Include="Types\FractalNoise.cs" />
     <Compile Include="Types\SoundTrackLevels.cs" />
     <Compile Include="Types\TextGridExample2.cs" />
@@ -86,8 +93,6 @@
     <Compile Include="Types\NoiseClip.cs" />
     <Compile Include="Types\NumberPattern.cs" />
     <Compile Include="Types\SunsetKaleidoskope.cs" />
-    <Compile Include="Types\Partial.cs" />
-    <Compile Include="Types\Demo.cs" />
     <Compile Include="Types\TimeClip.cs" />
     <Compile Include="Types\Layer2d.cs" />
     <Compile Include="Types\Switch.cs" />
@@ -114,7 +119,6 @@
     <Compile Include="Types\Vector2Components.cs" />
     <Compile Include="Types\Kaleidoskope.cs" />
     <Compile Include="Types\_ImageFxShaderSetup2.cs" />
-    <Compile Include="Types\BeatTime.cs" />
     <Compile Include="Types\ToFloat.cs" />
     <Compile Include="Types\WaveForm.cs" />
     <Compile Include="Types\SizeToDispatchCount.cs" />
@@ -205,7 +209,6 @@
     <Compile Include="Types\FloatFormat.cs" />
     <Compile Include="Types\FloatMultiInputToList.cs" />
     <Compile Include="Types\LoadTexture2d.cs" />
-    <Compile Include="Types\Project.cs" />
     <Compile Include="Types\Random.cs" />
     <Compile Include="Types\SelectFloatFromList.cs" />
     <Compile Include="Types\StringConcat.cs" />
