Further cleaned up projects

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RyojiPattern1.cs" />
+    <Compile Include="Types\RyojiPattern2.cs" />
     <Compile Include="Types\BeatCounterTest.cs" />
     <Compile Include="Types\SoundLevelExample.cs" />
     <Compile Include="Types\Partial.cs" />
@@ -97,10 +99,8 @@
     <Compile Include="Types\Layer2d.cs" />
     <Compile Include="Types\Switch.cs" />
     <Compile Include="Types\DomainNoise1.cs" />
-    <Compile Include="Types\DotPattern2.cs" />
     <Compile Include="Types\MondrianScope2.cs" />
     <Compile Include="Types\MondrianScope1.cs" />
-    <Compile Include="Types\DotPattern1.cs" />
     <Compile Include="Types\FloorPlanFractal.cs" />
     <Compile Include="Types\Kaleidorama1.cs" />
     <Compile Include="Types\Tint.cs" />
