--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\IsGreater.cs" />
+    <Compile Include="Types\FinalMessagesScene.cs" />
     <Compile Include="Types\RyojiPattern1.cs" />
     <Compile Include="Types\RyojiPattern2.cs" />
     <Compile Include="Types\BeatCounterTest.cs" />
