More tweaking to final part

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Counter.cs" />
+    <Compile Include="Types\Pulse.cs" />
+    <Compile Include="Types\Size2_.cs" />
+    <Compile Include="Types\BlendColors.cs" />
     <Compile Include="Types\IsGreater.cs" />
     <Compile Include="Types\FinalMessagesScene.cs" />
     <Compile Include="Types\RyojiPattern1.cs" />
