Tweaked colors in final part

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PickValue.cs" />
+    <Compile Include="Types\PickString.cs" />
     <Compile Include="Types\Counter.cs" />
     <Compile Include="Types\Pulse.cs" />
     <Compile Include="Types\Size2_.cs" />
