Playing with pattern highlights

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Blur.cs" />
+    <Compile Include="Types\PickTexture.cs" />
     <Compile Include="Types\PickValue.cs" />
     <Compile Include="Types\PickString.cs" />
     <Compile Include="Types\Counter.cs" />
@@ -117,7 +119,6 @@
     <Compile Include="Types\Blend.cs" />
     <Compile Include="Types\CheckerBoard.cs" />
     <Compile Include="Types\RoundedRect.cs" />
-    <Compile Include="Types\Bloom.cs" />
     <Compile Include="Types\Displace2.cs" />
     <Compile Include="Types\TypoGridBuffer.cs" />
     <Compile Include="Types\_multiImageFxSetup.cs" />
