More Animation work on Numbers middle part

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Vector4FromFloat.cs" />
     <Compile Include="Types\_TransitionEffect.cs" />
     <Compile Include="Types\Blur.cs" />
     <Compile Include="Types\PickTexture.cs" />
