Added EdgeRepeat effect and various improvements to other ops

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\EdgeRepeat.cs" />
+    <Compile Include="Types\IntroExperiment2.cs" />
     <Compile Include="Types\Vector4FromFloat.cs" />
     <Compile Include="Types\_TransitionEffect.cs" />
     <Compile Include="Types\Blur.cs" />
