--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SynthStuff.cs" />
     <Compile Include="Types\AfterGlow.cs" />
     <Compile Include="Types\EdgeRepeat.cs" />
     <Compile Include="Types\IntroExperiment2.cs" />
