Tweaking intro experiment

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RequestedResolution.cs" />
+    <Compile Include="Types\FragmentNoiseExample.cs" />
     <Compile Include="Types\AfterGlow2.cs" />
     <Compile Include="Types\Glow.cs" />
     <Compile Include="Types\SynthStuff.cs" />
