Added new intro part

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -62,6 +62,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\IntroSplitScene.cs" />
+    <Compile Include="Types\Grain.cs" />
+    <Compile Include="Types\ScaleResolution.cs" />
+    <Compile Include="Types\MakeResolution.cs" />
+    <Compile Include="Types\Size2Components.cs" />
+    <Compile Include="Types\RandomTestBlock.cs" />
+    <Compile Include="Types\ResolutionConstBuffer.cs" />
+    <Compile Include="Types\IntroExperiment3.cs" />
     <Compile Include="Types\RequestedResolution.cs" />
     <Compile Include="Types\FragmentNoiseExample.cs" />
     <Compile Include="Types\AfterGlow2.cs" />
