--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
   <package id="SharpDX" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.D3DCompiler" version="4.2.0" targetFramework="net471" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net471" />
