--- a/Operators.csproj
+++ b/Operators.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\HexGridDisplace.cs" />
     <Compile Include="Types\CalcParticleDispatchCount.cs" />
     <Compile Include="Types\IntroSplitScene.cs" />
     <Compile Include="Types\Grain.cs" />
