Added ops for loading a point cloud and adding these as particles

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -66,6 +66,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\AddPointClound.cs" />
+    <Compile Include="Types\LoadPointCloud.cs" />
     <Compile Include="Types\CurveTest.cs" />
     <Compile Include="Types\HexGridDisplace.cs" />
     <Compile Include="Types\CalcParticleDispatchCount.cs" />
