Added [Synchrotron] Demo

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Synchotron.cs" />
     <Compile Include="Types\AddPointClound.cs" />
     <Compile Include="Types\LoadPointCloud.cs" />
     <Compile Include="Types\CurveTest.cs" />
