Added op that sets up transforms for the shadow map

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types\OrthographicCamera.cs" />
+    <Compile Include="Types\ShadowMapTransformsConstBuffer.cs" />
     <Compile Include="Types\Synchotron.cs" />
     <Compile Include="Types\AddPointClound.cs" />
     <Compile Include="Types\LoadPointCloud.cs" />
