Added SampleCurve ops

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SampleCurve.cs" />
     <Compile Include="Types\OrthographicCamera.cs" />
     <Compile Include="Types\ShadowMapTransformsConstBuffer.cs" />
     <Compile Include="Types\Synchotron.cs" />
