--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,8 @@
   <ItemGroup>
     <Compile Include="Types\BassWasapi.cs" />
     <Compile Include="Types\CalcDispatchCount.cs" />
+    <Compile Include="Types\SoundInput.cs" />
+    <Compile Include="Types\TextFloor.cs" />
     <Compile Include="Types\SpherePointCloud.cs" />
     <Compile Include="Types\SampleCurve.cs" />
     <Compile Include="Types\OrthographicCamera.cs" />
