Added [DetectBpm] and slightly cleaned up [SoundInput]

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -75,7 +75,10 @@
   <ItemGroup>
     <Compile Include="Types\BassWasapi.cs" />
     <Compile Include="Types\CalcDispatchCount.cs" />
+    <Compile Include="Types\DetectBpm.cs" />
+    <Compile Include="Types\PeakLevel.cs" />
     <Compile Include="Types\SoundInput.cs" />
+    <Compile Include="Types\SumRange.cs" />
     <Compile Include="Types\TextFloor.cs" />
     <Compile Include="Types\SpherePointCloud.cs" />
     <Compile Include="Types\SampleCurve.cs" />
