Put particle shadow map example into own op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -73,6 +73,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ParticleShadowmapExample.cs" />
     <Compile Include="Types\BassWasapi.cs" />
     <Compile Include="Types\CalcDispatchCount.cs" />
     <Compile Include="Types\DetectBpm.cs" />
@@ -230,7 +231,6 @@
     <Compile Include="Types\ParticleConstants.cs" />
     <Compile Include="Types\ParticleCountConstBuffer.cs" />
     <Compile Include="Types\ParticleIndexBuffer.cs" />
-    <Compile Include="Types\ParticleRenderPipeline.cs" />
     <Compile Include="Types\Multiply.cs" />
     <Compile Include="Types\BlendStateOp.cs" />
     <Compile Include="Types\ComputeShader.cs" />
