--- a/Operators.csproj
+++ b/Operators.csproj
@@ -73,6 +73,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CurvesToTexture.cs" />
     <Compile Include="Types\ParticleTests.cs" />
     <Compile Include="Types\ParticleShadowmapExample.cs" />
     <Compile Include="Types\CalcDispatchCount.cs" />
