Added dailies and renamed RandomTextBlock

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -73,6 +73,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Daily05_02.cs" />
+    <Compile Include="Types\RandomTextBlock.cs" />
     <Compile Include="Types\MirrorRepeat.cs" />
     <Compile Include="Types\Jitter2d.cs" />
     <Compile Include="Types\CynicTestLab.cs" />
@@ -103,7 +105,6 @@
     <Compile Include="Types\ScaleResolution.cs" />
     <Compile Include="Types\MakeResolution.cs" />
     <Compile Include="Types\Size2Components.cs" />
-    <Compile Include="Types\RandomTestBlock.cs" />
     <Compile Include="Types\ResolutionConstBuffer.cs" />
     <Compile Include="Types\IntroExperiment3.cs" />
     <Compile Include="Types\RequestedResolution.cs" />
