Added test operator

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Types\MirrorRepeat.cs" />
     <Compile Include="Types\Jitter2d.cs" />
+    <Compile Include="Types\CynicTestLab.cs" />
     <Compile Include="Types\PlanePointCloud.cs" />
     <Compile Include="Types\SoundInputExample.cs" />
     <Compile Include="Types\HexGridExample.cs" />
