--- a/Operators.csproj
+++ b/Operators.csproj
@@ -73,6 +73,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ValueSlider.cs" />
     <Compile Include="Types\Daily05_02.cs" />
     <Compile Include="Types\RandomTextBlock.cs" />
     <Compile Include="Types\MirrorRepeat.cs" />
