--- a/Operators.csproj
+++ b/Operators.csproj
@@ -63,6 +63,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -73,6 +74,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\BuildAsciiFontSorting.cs" />
+    <Compile Include="Types\AsciiRender.cs" />
+    <Compile Include="Types\RaymarchFractal.cs" />
     <Compile Include="Types\GradientSlider.cs" />
     <Compile Include="Types\ValueSlider.cs" />
     <Compile Include="Types\Daily05_02.cs" />
