--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Blob.cs" />
     <Compile Include="Types\BuildAsciiFontSorting.cs" />
     <Compile Include="Types\AsciiRender.cs" />
     <Compile Include="Types\RaymarchFractal.cs" />
@@ -178,7 +179,6 @@
     <Compile Include="Types\KochKaleidoskope.cs" />
     <Compile Include="Types\Blend.cs" />
     <Compile Include="Types\CheckerBoard.cs" />
-    <Compile Include="Types\RoundedRect.cs" />
     <Compile Include="Types\Displace2.cs" />
     <Compile Include="Types\TypoGridBuffer.cs" />
     <Compile Include="Types\_multiImageFxSetup.cs" />
