The dashboard meta files are now ignored by git

--- a/.gitignore
+++ b/.gitignore
@@ -259,4 +259,11 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-T3/imgui.ini
+
+
+
+# T3 Operators
+Types/Dashboard_dab61a12-9996-401e-9aa6-328dd6292beb.t3
+Types/Dashboard_dab61a12-9996-401e-9aa6-328dd6292beb.t3ui
+
+
