Combined [RectTextureEmit] symbol from test setup

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RectTextureEmit.cs" />
     <Compile Include="Types\Blob.cs" />
     <Compile Include="Types\BuildAsciiFontSorting.cs" />
     <Compile Include="Types\AsciiRender.cs" />
