--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RasterExample.cs" />
+    <Compile Include="Types\Raster.cs" />
     <Compile Include="Types\AdjustColors.cs" />
     <Compile Include="Types\RandomCamera.cs" />
     <Compile Include="Types\RectTextureEmit.cs" />
