Added SinForm and Steps

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GradientsToTexture.cs" />
+    <Compile Include="Types\Steps.cs" />
+    <Compile Include="Types\SinForm.cs" />
     <Compile Include="Types\RasterExample.cs" />
     <Compile Include="Types\Raster.cs" />
     <Compile Include="Types\AdjustColors.cs" />
