--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RaymarchingFlicker.cs" />
     <Compile Include="Types\StepsExamples.cs" />
     <Compile Include="Types\GradientsToTexture.cs" />
     <Compile Include="Types\Steps.cs" />
