Aligning image effect parameters

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\OBSOLETE_Displace.cs" />
     <Compile Include="Types\Daily_Mai23.cs" />
     <Compile Include="Types\RaymarchingFlicker.cs" />
     <Compile Include="Types\StepsExamples.cs" />
@@ -220,7 +221,6 @@
     <Compile Include="Types\ColorGrade.cs" />
     <Compile Include="Types\ClearRenderTarget.cs" />
     <Compile Include="Types\FloatConstBuffer.cs" />
-    <Compile Include="Types\Displace.cs" />
     <Compile Include="Types\CopyStructureCount.cs" />
     <Compile Include="Types\Cos.cs" />
     <Compile Include="Types\DrawInstancedIndirect.cs" />
