--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Displace.cs" />
     <Compile Include="Types\OBSOLETE_Displace.cs" />
     <Compile Include="Types\Daily_Mai23.cs" />
     <Compile Include="Types\RaymarchingFlicker.cs" />
@@ -191,7 +192,6 @@
     <Compile Include="Types\KochKaleidoskope.cs" />
     <Compile Include="Types\Blend.cs" />
     <Compile Include="Types\CheckerBoard.cs" />
-    <Compile Include="Types\Displace2.cs" />
     <Compile Include="Types\TypoGridBuffer.cs" />
     <Compile Include="Types\_multiImageFxSetup.cs" />
     <Compile Include="Types\Damp.cs" />
