--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Dalies_May24b.cs" />
+    <Compile Include="Types\FakeLight.cs" />
     <Compile Include="Types\Displace.cs" />
     <Compile Include="Types\OBSOLETE_Displace.cs" />
     <Compile Include="Types\Daily_Mai23.cs" />
