--- a/Operators.csproj
+++ b/Operators.csproj
@@ -74,6 +74,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Dailies_May26.cs" />
     <Compile Include="Types\Dalies_May24b.cs" />
     <Compile Include="Types\FakeLight.cs" />
     <Compile Include="Types\Displace.cs" />
