--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NAudio" version="1.10.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
   <package id="SharpDX" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.D3DCompiler" version="4.2.0" targetFramework="net471" />
