--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Jitter.cs" />
     <Compile Include="Types\ValueToRate.cs" />
     <Compile Include="Types\MidiInput.cs" />
     <Compile Include="Types\Dailies_May26.cs" />
