Added first proof-of-concept of distance field shader fragment

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ReplaceString.cs" />
+    <Compile Include="Types\ReadFile.cs" />
+    <Compile Include="Types\WriteToFile.cs" />
     <Compile Include="Types\Jitter.cs" />
     <Compile Include="Types\ValueToRate.cs" />
     <Compile Include="Types\MidiInput.cs" />
