--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ChromaticDistortionExample.cs" />
+    <Compile Include="Types\ChromaticDistortion.cs" />
     <Compile Include="Types\ReplaceString.cs" />
     <Compile Include="Types\ReadFile.cs" />
     <Compile Include="Types\WriteToFile.cs" />
