Added SetTime, ScaleVec2 and some content ops for HandClap project

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ScaleVec2.cs" />
+    <Compile Include="Types\SetTime.cs" />
+    <Compile Include="Types\ClapKeys.cs" />
+    <Compile Include="Types\HandClapTest1.cs" />
     <Compile Include="Types\ChromaticDistortionExample.cs" />
     <Compile Include="Types\ChromaticDistortion.cs" />
     <Compile Include="Types\ReplaceString.cs" />
