--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PictureShow.cs" />
+    <Compile Include="Types\HandClapTest2.cs" />
+    <Compile Include="Types\HandClap.cs" />
     <Compile Include="Types\ScaleVec2.cs" />
     <Compile Include="Types\SetTime.cs" />
     <Compile Include="Types\ClapKeys.cs" />
