Added some prototyping ops for ForEach implementation

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ListAppender.cs" />
+    <Compile Include="Types\ListExtractor.cs" />
+    <Compile Include="Types\ForEachTest.cs" />
     <Compile Include="Types\PictureShow.cs" />
     <Compile Include="Types\HandClapTest2.cs" />
     <Compile Include="Types\HandClap.cs" />
