Added better fake light lookup

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\FlashingFaces.cs" />
+    <Compile Include="Types\Pow.cs" />
+    <Compile Include="Types\Rings.cs" />
+    <Compile Include="Types\Dailies2020_06_16.cs" />
     <Compile Include="Types\ListAppender.cs" />
     <Compile Include="Types\ListExtractor.cs" />
     <Compile Include="Types\ForEachTest.cs" />
