Added a code foreach test op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types\FlashingFaces.cs" />
+    <Compile Include="Types\ForEachCodeTest.cs" />
     <Compile Include="Types\Pow.cs" />
     <Compile Include="Types\Rings.cs" />
     <Compile Include="Types\Dailies2020_06_16.cs" />
