Add first stub for font-rendering

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RenderText.cs" />
+    <Compile Include="Types\LoadFont.cs" />
     <Compile Include="Types\FlashingFaces.cs" />
     <Compile Include="Types\ForEachCodeTest.cs" />
     <Compile Include="Types\Pow.cs" />
@@ -328,6 +330,7 @@
     <Compile Include="Types\VertexShader.cs" />
     <Compile Include="Types\VertexShaderStage.cs" />
     <Compile Include="Types\Viewport.cs" />
+    <Compile Include="Utils\BmFont.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
