Updated HandClap timing

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Types\LoadFont.cs" />
     <Compile Include="Types\FlashingFaces.cs" />
     <Compile Include="Types\ForEachCodeTest.cs" />
+    <Compile Include="Types\HandClap3.cs" />
     <Compile Include="Types\Pow.cs" />
     <Compile Include="Types\Rings.cs" />
     <Compile Include="Types\Dailies2020_06_16.cs" />
