Updated RenderText to support basic parameters and adjust scale parameter

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,8 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\_RenderFontBuffer.cs" />
     <Compile Include="Types\RenderText.cs" />
-    <Compile Include="Types\LoadFont.cs" />
     <Compile Include="Types\FlashingFaces.cs" />
     <Compile Include="Types\ForEachCodeTest.cs" />
     <Compile Include="Types\HandClap3.cs" />
