Fix [AfterGlow] image overlay for arbitrary aspect ratios and add a bunch of string helper methods

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,8 +78,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\StringInsert.cs" />
+    <Compile Include="Types\StringRepeat.cs" />
+    <Compile Include="Types\StringReplace.cs" />
+    <Compile Include="Types\Text.cs" />
     <Compile Include="Types\_RenderFontBuffer.cs" />
-    <Compile Include="Types\RenderText.cs" />
     <Compile Include="Types\FlashingFaces.cs" />
     <Compile Include="Types\ForEachCodeTest.cs" />
     <Compile Include="Types\HandClap3.cs" />
@@ -98,7 +101,6 @@
     <Compile Include="Types\HandClapTest1.cs" />
     <Compile Include="Types\ChromaticDistortionExample.cs" />
     <Compile Include="Types\ChromaticDistortion.cs" />
-    <Compile Include="Types\ReplaceString.cs" />
     <Compile Include="Types\ReadFile.cs" />
     <Compile Include="Types\WriteToFile.cs" />
     <Compile Include="Types\Jitter.cs" />
