--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GpuMeasure.cs" />
     <Compile Include="Types\StringInsert.cs" />
     <Compile Include="Types\StringRepeat.cs" />
     <Compile Include="Types\StringReplace.cs" />
@@ -334,6 +335,7 @@
     <Compile Include="Types\VertexShaderStage.cs" />
     <Compile Include="Types\Viewport.cs" />
     <Compile Include="Utils\BmFont.cs" />
+    <Compile Include="Utils\GPUQuery.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
