--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RandomIntBuffer.cs" />
     <Compile Include="Types\GpuMeasure.cs" />
     <Compile Include="Types\StringInsert.cs" />
     <Compile Include="Types\StringRepeat.cs" />
