--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,10 +78,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RandomParticleIndexBuffer.cs" />
     <Compile Include="Types\TextOutlines.cs" />
     <Compile Include="Types\DepthToLinear.cs" />
     <Compile Include="Types\GpuSorter.cs" />
-    <Compile Include="Types\RandomIntBuffer.cs" />
     <Compile Include="Types\FloatsToList.cs" />
     <Compile Include="Types\Vector4ToFloat4.cs" />
     <Compile Include="Types\FloatsToBuffer.cs" />
