--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\BlendValues.cs" />
     <Compile Include="Types\RandomParticleIndexBuffer.cs" />
     <Compile Include="Types\TextOutlines.cs" />
     <Compile Include="Types\DepthToLinear.cs" />
