--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Downsample.cs" />
     <Compile Include="Types\CoC.cs" />
     <Compile Include="Types\Scene1.cs" />
     <Compile Include="Types\BlendValues.cs" />
