Added RenderGridQuad operator

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\AddVec3.cs" />
+    <Compile Include="Types\Float3ToVector3.cs" />
+    <Compile Include="Types\Scene12.cs" />
+    <Compile Include="Types\RenderGridQuad.cs" />
+    <Compile Include="Types\GridPlane.cs" />
     <Compile Include="Types\Downsample.cs" />
     <Compile Include="Types\CoC.cs" />
     <Compile Include="Types\Scene1.cs" />
@@ -98,7 +103,6 @@
     <Compile Include="Types\Float4ToVector4.cs" />
     <Compile Include="Types\Float2ToVector2.cs" />
     <Compile Include="Types\ScaleVector2.cs" />
-    <Compile Include="Types\Float2ToVector3.cs" />
     <Compile Include="Types\Vector2ToFloat2.cs" />
     <Compile Include="Types\IntToFloat.cs" />
     <Compile Include="Types\FloatToInt.cs" />
