--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,11 +78,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GridPlane.cs" />
+    <Compile Include="Types\__ObsoleteGridPlane.cs" />
     <Compile Include="Types\AddVec3.cs" />
     <Compile Include="Types\Float3ToVector3.cs" />
     <Compile Include="Types\Scene12.cs" />
-    <Compile Include="Types\RenderGridQuad.cs" />
-    <Compile Include="Types\GridPlane.cs" />
     <Compile Include="Types\Downsample.cs" />
     <Compile Include="Types\CoC.cs" />
     <Compile Include="Types\Scene1.cs" />
