Added grid-plane-gizmo op as workaround for instancing outside of canvas
Problem is that the grid-plane op itself needs a composition op itself
in order that the inputs work correctly. this is done by this wrapper
now.

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GridPlaneGizmo.cs" />
     <Compile Include="Types\GridPlane.cs" />
     <Compile Include="Types\__ObsoleteGridPlane.cs" />
     <Compile Include="Types\AddVec3.cs" />
