--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\LifetimeUpdate.cs" />
     <Compile Include="Types\GridPlaneGizmo.cs" />
     <Compile Include="Types\GridPlane.cs" />
     <Compile Include="Types\__ObsoleteGridPlane.cs" />
