Add Camera offsets

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -79,6 +79,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types\LifetimeUpdate.cs" />
+    <Compile Include="Types\PerlinNoise3.cs" />
+    <Compile Include="Types\DepthStencilStateOp.cs" />
     <Compile Include="Types\GridPlaneGizmo.cs" />
     <Compile Include="Types\GridPlane.cs" />
     <Compile Include="Types\__ObsoleteGridPlane.cs" />
