Add DrawParticles op and particle emitTime

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DrawParticles.cs" />
     <Compile Include="Types\LifetimeUpdate.cs" />
     <Compile Include="Types\PerlinNoise3.cs" />
     <Compile Include="Types\DepthStencilStateOp.cs" />
