--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CameraSetupTest.cs" />
     <Compile Include="Types\Locator.cs" />
     <Compile Include="Types\BoundingBox.cs" />
     <Compile Include="Types\DrawParticles.cs" />
