Added point cloud from obj operator

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types\CameraSetupTest.cs" />
+    <Compile Include="Types\PointCloudFromObj.cs" />
     <Compile Include="Types\Locator.cs" />
     <Compile Include="Types\BoundingBox.cs" />
     <Compile Include="Types\DrawParticles.cs" />
