Cleaned up particle scene

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Compare.cs" />
+    <Compile Include="Types\CurlNoiseWithGizmo.cs" />
     <Compile Include="Types\CameraSetupTest.cs" />
     <Compile Include="Types\PointCloudFromObj.cs" />
     <Compile Include="Types\Locator.cs" />
@@ -293,7 +295,6 @@
     <Compile Include="Types\ParticleEmitter.cs" />
     <Compile Include="Types\ParticleSystemComponents.cs" />
     <Compile Include="Types\ParticleSystemSetup.cs" />
-    <Compile Include="Types\ParticleUpdate.cs" />
     <Compile Include="Types\RenderQuad.cs" />
     <Compile Include="Types\RenderTarget.cs" />
     <Compile Include="Types\ResetSubtreeTrigger.cs" />
