Add gizmo visibility

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GizmoVisibility.cs" />
     <Compile Include="Types\Compare.cs" />
     <Compile Include="Types\CurlNoiseWithGizmo.cs" />
     <Compile Include="Types\CameraSetupTest.cs" />
