Scene13 -> Attempt to add ParticleSystem to context

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Scene13.cs" />
+    <Compile Include="Types\GetParticleSystem.cs" />
+    <Compile Include="Types\SetParticleSystem.cs" />
     <Compile Include="Types\GizmoVisibility.cs" />
     <Compile Include="Types\Compare.cs" />
     <Compile Include="Types\CurlNoiseWithGizmo.cs" />
