--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ScaleSize.cs" />
     <Compile Include="Types\Scene13.cs" />
     <Compile Include="Types\GetParticleSystem.cs" />
     <Compile Include="Types\SetParticleSystem.cs" />
