Added several ops for proper particle emitting from mesh

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Once.cs" />
+    <Compile Include="Types\IntAdd.cs" />
+    <Compile Include="Types\Invert.cs" />
+    <Compile Include="Types\BoolToInt.cs" />
+    <Compile Include="Types\PointCloudEmitter.cs" />
     <Compile Include="Types\ScaleSize.cs" />
     <Compile Include="Types\Scene13.cs" />
     <Compile Include="Types\GetParticleSystem.cs" />
