Added LastFrameDuration op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Clamp.cs" />
     <Compile Include="Types\Once.cs" />
     <Compile Include="Types\IntAdd.cs" />
     <Compile Include="Types\Invert.cs" />
@@ -91,6 +92,7 @@
     <Compile Include="Types\Compare.cs" />
     <Compile Include="Types\CurlNoiseWithGizmo.cs" />
     <Compile Include="Types\CameraSetupTest.cs" />
+    <Compile Include="Types\LastFrameDuration.cs" />
     <Compile Include="Types\PointCloudFromObj.cs" />
     <Compile Include="Types\Locator.cs" />
     <Compile Include="Types\BoundingBox.cs" />
