Detail fixes to point cloud emitter

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Types\ScaleSize.cs" />
     <Compile Include="Types\Scene13.cs" />
     <Compile Include="Types\GetParticleSystem.cs" />
+    <Compile Include="Types\Scene2.cs" />
     <Compile Include="Types\SetParticleSystem.cs" />
     <Compile Include="Types\GizmoVisibility.cs" />
     <Compile Include="Types\Compare.cs" />
