--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\BlendWithMask.cs" />
     <Compile Include="Types\Clamp.cs" />
     <Compile Include="Types\Once.cs" />
     <Compile Include="Types\IntAdd.cs" />
