--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\BoolToFloats.cs" />
+    <Compile Include="Types\LFO.cs" />
     <Compile Include="Types\BlendWithMask.cs" />
     <Compile Include="Types\Clamp.cs" />
     <Compile Include="Types\Once.cs" />
