--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\AnalyzeSound.cs" />
+    <Compile Include="Types\AmplifyValues.cs" />
+    <Compile Include="Types\ValuesToTexture.cs" />
     <Compile Include="Types\BoolToFloats.cs" />
     <Compile Include="Types\LFO.cs" />
     <Compile Include="Types\BlendWithMask.cs" />
