--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DrawParticlesWithShadows.cs" />
+    <Compile Include="Types\TomShadowParticleScene.cs" />
     <Compile Include="Types\AnalyzeSound.cs" />
     <Compile Include="Types\AmplifyValues.cs" />
     <Compile Include="Types\ValuesToTexture.cs" />
