Tweaking with [DrawPoints] line render style

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DrawPointsExample.cs" />
+    <Compile Include="Types\NoisePoints.cs" />
+    <Compile Include="Types\PickBlendMode.cs" />
     <Compile Include="Types\MixPoints.cs" />
     <Compile Include="Types\DrawPoints.cs" />
     <Compile Include="Types\Points.cs" />
