Attempted to implement MixPoints on with compute shaders

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DrawGPoints.cs" />
+    <Compile Include="Types\MultiplyInt.cs" />
+    <Compile Include="Types\GetSRVProperties.cs" />
+    <Compile Include="Types\ExecuteBufferUpdate.cs" />
+    <Compile Include="Types\MixGPoints.cs" />
     <Compile Include="Types\DrawPointsExample.cs" />
     <Compile Include="Types\NoisePoints.cs" />
     <Compile Include="Types\PickBlendMode.cs" />
