--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\LinearPoints.cs" />
+    <Compile Include="Types\RadialPoints.cs" />
     <Compile Include="Types\DrawGPoints.cs" />
     <Compile Include="Types\MultiplyInt.cs" />
     <Compile Include="Types\GetSRVProperties.cs" />
@@ -88,7 +90,6 @@
     <Compile Include="Types\PickBlendMode.cs" />
     <Compile Include="Types\MixPoints.cs" />
     <Compile Include="Types\DrawPoints.cs" />
-    <Compile Include="Types\Points.cs" />
     <Compile Include="Types\PointsToBuffer.cs" />
     <Compile Include="Types\DrawParticlesWithShadows.cs" />
     <Compile Include="Types\TomShadowParticleScene.cs" />
