--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PointCloudSlicer.cs" />
     <Compile Include="Types\LinearPoints.cs" />
     <Compile Include="Types\RadialPoints.cs" />
     <Compile Include="Types\DrawGPoints.cs" />
