--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,11 +78,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DrawLines.cs" />
     <Compile Include="Types\GrainExample.cs" />
     <Compile Include="Types\PointCloudSlicer.cs" />
     <Compile Include="Types\LinearPoints.cs" />
     <Compile Include="Types\RadialPoints.cs" />
-    <Compile Include="Types\DrawGPoints.cs" />
     <Compile Include="Types\MultiplyInt.cs" />
     <Compile Include="Types\GetSRVProperties.cs" />
     <Compile Include="Types\ExecuteBufferUpdate.cs" />
