--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ExecuteSRVUpdate.cs" />
     <Compile Include="Types\DrawLines.cs" />
     <Compile Include="Types\GrainExample.cs" />
     <Compile Include="Types\PointCloudSlicer.cs" />
