Updated line rendering and fix point generation count

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\AddInts.cs" />
+    <Compile Include="Types\RadialGPoints.cs" />
     <Compile Include="Types\ExecuteSRVUpdate.cs" />
     <Compile Include="Types\DrawLines.cs" />
     <Compile Include="Types\GrainExample.cs" />
