Add more point ops and [DrawLinesExamples]

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DrawLinesExample.cs" />
+    <Compile Include="Types\RepeatGPoints.cs" />
+    <Compile Include="Types\AddNoise.cs" />
+    <Compile Include="Types\ClampInt.cs" />
+    <Compile Include="Types\GridGPoints.cs" />
     <Compile Include="Types\AddInts.cs" />
     <Compile Include="Types\RadialGPoints.cs" />
     <Compile Include="Types\ExecuteSRVUpdate.cs" />
