--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SamplePointAttributes.cs" />
     <Compile Include="Types\DrawLinesExample.cs" />
     <Compile Include="Types\RepeatGPoints.cs" />
     <Compile Include="Types\AddNoise.cs" />
