Added new structured buffer op that uses the new 'BufferWithViews' type

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GetBufferComponents.cs" />
+    <Compile Include="Types\StructuredBuffer2.cs" />
     <Compile Include="Types\SamplePointAttributes.cs" />
     <Compile Include="Types\DrawLinesExample.cs" />
     <Compile Include="Types\RepeatGPoints.cs" />
