First version of triangle transition

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,8 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types\GetBufferComponents.cs" />
-    <Compile Include="Types\StructuredBuffer2.cs" />
+    <Compile Include="Types\TriangleGridTransition.cs" />
     <Compile Include="Types\SamplePointAttributes.cs" />
     <Compile Include="Types\DrawLinesExample.cs" />
     <Compile Include="Types\RepeatGPoints.cs" />
