Fixed GridLines example

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,7 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types\TriangleGridTransition.cs" />
+    <Compile Include="Types\GetBufferComponents.cs" />
+    <Compile Include="Types\StructuredBuffer2.cs" />
     <Compile Include="Types\SamplePointAttributes.cs" />
     <Compile Include="Types\DrawLinesExample.cs" />
     <Compile Include="Types\RepeatGPoints.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="Types\TomShadowParticleScene.cs" />
     <Compile Include="Types\AnalyzeSound.cs" />
     <Compile Include="Types\AmplifyValues.cs" />
+    <Compile Include="Types\TriangleGridTransition.cs" />
     <Compile Include="Types\ValuesToTexture.cs" />
     <Compile Include="Types\BoolToFloats.cs" />
     <Compile Include="Types\LFO.cs" />
