--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PointTrail.cs" />
     <Compile Include="Types\GetBufferComponents.cs" />
     <Compile Include="Types\StructuredBuffer2.cs" />
     <Compile Include="Types\SamplePointAttributes.cs" />
