--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SphereGizmo.cs" />
+    <Compile Include="Types\AppendPoints.cs" />
     <Compile Include="Types\ApplyForce.cs" />
     <Compile Include="Types\ApplyNoise.cs" />
     <Compile Include="Types\PointTrail.cs" />
