Added op for generated SDF with EDTAA from input image

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Edtaa.cs" />
     <Compile Include="Types\SphereGizmo.cs" />
     <Compile Include="Types\AppendPoints.cs" />
     <Compile Include="Types\ApplyForce.cs" />
