--- a/Operators.csproj
+++ b/Operators.csproj
@@ -78,6 +78,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CopyPoints.cs" />
+    <Compile Include="Types\BlendPoints.cs" />
     <Compile Include="Types\Edtaa.cs" />
     <Compile Include="Types\SphereGizmo.cs" />
     <Compile Include="Types\AppendPoints.cs" />
