Add first stab of UseRenderTarget reference for feedback effects

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Types\AnalyzeSound.cs" />
     <Compile Include="Types\AmplifyValues.cs" />
     <Compile Include="Types\TriangleGridTransition.cs" />
+    <Compile Include="Types\UseRenderTarget.cs" />
     <Compile Include="Types\ValuesToTexture.cs" />
     <Compile Include="Types\BoolToFloats.cs" />
     <Compile Include="Types\LFO.cs" />
