--- a/Operators.csproj
+++ b/Operators.csproj
@@ -55,6 +55,10 @@
       <HintPath>..\packages\SharpDX.D3DCompiler.4.2.0\lib\net45\SharpDX.D3DCompiler.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SharpDX.Direct2D1, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1">
+      <HintPath>..\packages\SharpDX.Direct2D1.4.2.0\lib\net45\SharpDX.Direct2D1.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SharpDX.Direct3D11, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpDX.Direct3D11.4.2.0\lib\net45\SharpDX.Direct3D11.dll</HintPath>
     </Reference>
@@ -82,6 +86,7 @@
     <Compile Include="Types\CopyPoints.cs" />
     <Compile Include="Types\Edtaa.cs" />
     <Compile Include="Types\FluidFeedback.cs" />
+    <Compile Include="Types\LoadImageFromUrl.cs" />
     <Compile Include="Types\SphereGizmo.cs" />
     <Compile Include="Types\AppendPoints.cs" />
     <Compile Include="Types\ApplyForce.cs" />
