Added FadingFaces op and fixed build warnings

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -190,8 +190,10 @@
     <Compile Include="Types\ApplyBlend.cs" />
     <Compile Include="Types\CopyPoints.cs" />
     <Compile Include="Types\Edtaa.cs" />
+    <Compile Include="Types\FadingFaces.cs" />
     <Compile Include="Types\FluidFeedback.cs" />
     <Compile Include="Types\LoadImageFromUrl.cs" />
+    <Compile Include="Types\Or.cs" />
     <Compile Include="Types\SphereGizmo.cs" />
     <Compile Include="Types\AppendPoints.cs" />
     <Compile Include="Types\ApplyForce.cs" />
