--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\VariationSetup.cs" />
     <Compile Include="Types\ApplyBlend.cs" />
     <Compile Include="Types\CopyPoints.cs" />
     <Compile Include="Types\Edtaa.cs" />
