Some changes for the first variation approach

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,8 +187,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\VariationOverwrite.cs" />
     <Compile Include="Types\DrawRibbons.cs" />
-    <Compile Include="Types\VariationSetup.cs" />
     <Compile Include="Types\ApplyBlend.cs" />
     <Compile Include="Types\CopyPoints.cs" />
     <Compile Include="Types\Edtaa.cs" />
