--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\VisualizePoints.cs" />
+    <Compile Include="Types\DrawSprites.cs" />
     <Compile Include="Types\PointsFromMeshData.cs" />
     <Compile Include="Types\VariationOverwrite.cs" />
     <Compile Include="Types\DrawRibbons.cs" />
