--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\TestImageFx.cs" />
     <Compile Include="Types\ImageLevels.cs" />
     <Compile Include="Types\SortPixelGlitch.cs" />
     <Compile Include="Types\VisualizePoints.cs" />
